--- a/midbase/css/main.css
+++ b/midbase/css/main.css
@@ -12,6 +12,7 @@ background-color: rgb(40, 148, 13);
 }
 .aprs-color2{
 background-color: rgb(255, 140, 0);
+color:#FFF;
 }
 .aprs-inline-block{
   display: inline-block;
